; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/extr_clk-milbeaut.c_m10v_clk_divider_recalc_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/extr_clk-milbeaut.c_m10v_clk_divider_recalc_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.m10v_clk_divider = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk_hw*, i64)* @m10v_clk_divider_recalc_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @m10v_clk_divider_recalc_rate(%struct.clk_hw* %0, i64 %1) #0 {
  %3 = alloca %struct.clk_hw*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.m10v_clk_divider*, align 8
  %6 = alloca i32, align 4
  store %struct.clk_hw* %0, %struct.clk_hw** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.clk_hw*, %struct.clk_hw** %3, align 8
  %8 = call %struct.m10v_clk_divider* @to_m10v_div(%struct.clk_hw* %7)
  store %struct.m10v_clk_divider* %8, %struct.m10v_clk_divider** %5, align 8
  %9 = load %struct.m10v_clk_divider*, %struct.m10v_clk_divider** %5, align 8
  %10 = getelementptr inbounds %struct.m10v_clk_divider, %struct.m10v_clk_divider* %9, i32 0, i32 4
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @readl(i32 %11)
  %13 = load %struct.m10v_clk_divider*, %struct.m10v_clk_divider** %5, align 8
  %14 = getelementptr inbounds %struct.m10v_clk_divider, %struct.m10v_clk_divider* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = lshr i32 %12, %15
  store i32 %16, i32* %6, align 4
  %17 = load %struct.m10v_clk_divider*, %struct.m10v_clk_divider** %5, align 8
  %18 = getelementptr inbounds %struct.m10v_clk_divider, %struct.m10v_clk_divider* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @clk_div_mask(i32 %19)
  %21 = load i32, i32* %6, align 4
  %22 = and i32 %21, %20
  store i32 %22, i32* %6, align 4
  %23 = load %struct.clk_hw*, %struct.clk_hw** %3, align 8
  %24 = load i64, i64* %4, align 8
  %25 = load i32, i32* %6, align 4
  %26 = load %struct.m10v_clk_divider*, %struct.m10v_clk_divider** %5, align 8
  %27 = getelementptr inbounds %struct.m10v_clk_divider, %struct.m10v_clk_divider* %26, i32 0, i32 3
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.m10v_clk_divider*, %struct.m10v_clk_divider** %5, align 8
  %30 = getelementptr inbounds %struct.m10v_clk_divider, %struct.m10v_clk_divider* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.m10v_clk_divider*, %struct.m10v_clk_divider** %5, align 8
  %33 = getelementptr inbounds %struct.m10v_clk_divider, %struct.m10v_clk_divider* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i64 @divider_recalc_rate(%struct.clk_hw* %23, i64 %24, i32 %25, i32 %28, i32 %31, i32 %34)
  ret i64 %35
}

declare dso_local %struct.m10v_clk_divider* @to_m10v_div(%struct.clk_hw*) #1

declare dso_local i32 @readl(i32) #1

declare dso_local i32 @clk_div_mask(i32) #1

declare dso_local i64 @divider_recalc_rate(%struct.clk_hw*, i64, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
